<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ResultsActivity"
    tools:showIn="@layout/activity_results">

    <TextView
        android:id="@+id/tv_height"
        android:text="@string/height_inches"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/results_TV" />

    <TextView
        android:id="@+id/tv_weight"
        android:text="@string/weight_pounds"
        app:layout_constraintEnd_toEndOf="@+id/tv_BMI"
        app:layout_constraintStart_toStartOf="@+id/tv_BMI"
        app:layout_constraintTop_toBottomOf="@+id/tv_BMI"
        style="@style/results_TV" />

    <TextView
        android:id="@+id/tv_BMI"
        android:text="@string/BMI"
        app:layout_constraintEnd_toEndOf="@+id/tv_BMI_Group"
        app:layout_constraintStart_toStartOf="@+id/tv_BMI_Group"
        app:layout_constraintTop_toBottomOf="@+id/tv_BMI_Group"
        style="@style/results_TV" />

    <TextView
        android:id="@+id/tv_BMI_Group"
        android:text="@string/BMI_Group"
        app:layout_constraintEnd_toEndOf="@+id/tv_height"
        app:layout_constraintStart_toStartOf="@+id/tv_height"
        app:layout_constraintTop_toBottomOf="@+id/tv_height"
        style="@style/results_TV" />
</androidx.constraintlayout.widget.ConstraintLayout>